--- a/css/index.css
+++ b/css/index.css
@@ -35,15 +35,16 @@ body {
     height: 100%;
     width: 250px;
     border-radius: 6px;
-    background-color: #00000040;
+    background-color: rgba(0, 0, 0, 0.2);
     flex-grow: 1;
     margin: 0 10px;
     overflow: hidden;
     cursor: pointer;
+    transition: all 500ms;
 }
 
 .item:hover {
-    background-color: #00000060;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .menu {
@@ -81,6 +82,8 @@ body {
     .item {
         width: auto;
         margin: 10px 10px;
+        background-color: rgba(0, 0, 0, 0.2);
+        border-radius: 6px;
     }
 
     .menu {
