--- a/src/components/SearchEdit/_SearchEdit.scss
+++ b/src/components/SearchEdit/_SearchEdit.scss
@@ -1,10 +1,10 @@
 .SearchEdit {
   // Vars
-  $actionSize: 25px;
-  $actionApiSize: 30px;
+  $action-size: 25px;
+  $action-api-size: 30px;
 
-  $actionColor: #a7a7a7;
-  $actionColorHover: #4e92df;
+  $action-color: #a7a7a7;
+  $action-color-hover: #4e92df;
 
   // Support
 
@@ -14,17 +14,17 @@
   }
 
   .SearchWrap {
-    width: 100%;
-    height: 45px;
-    box-shadow: 1px 1px 6px 0 rgba(119, 119, 119, .5);
     border-radius: 25px !important;
     border-width: 0;
+    box-shadow: 1px 1px 6px 0 rgba(119, 119, 119, .5);
     display: flex;
     flex-direction: row;
+    height: 45px;
     tab-index: 0;
+    width: 100%;
 
     &:hover {
-      box-shadow: 1px 1px 6px 0 $actionColorHover;
+      box-shadow: 1px 1px 6px 0 $action-color-hover;
     }
 
     .SearchInput {
@@ -49,44 +49,52 @@
         width: 35px;
       }
 
-      .SearchMain {
-        background-color: $actionColor;
-        mask-image: url("../../assets/search.svg");
+      .ItemBg {
+        background-color: $action-color;
         mask-repeat: no-repeat;
         mask-position: center center;
-        mask-size: $actionApiSize $actionApiSize;
+        mask-size: $action-api-size $action-api-size;
+      }
+
+      .ItemBgH {
+        background-color: $action-color-hover;
+        mask-size: $action-api-size $action-api-size;
+        cursor: pointer;
+      }
+
+      .SearchMain {
+        mask-image: url("../../assets/search.svg");
+        @extend .ItemBg;
 
         &:hover {
-          background-color: $actionColorHover;
-          mask-size: $actionApiSize $actionApiSize;
-          cursor: pointer;
+          @extend .ItemBgH;
         }
       }
 
       .SearchApi {
-        background-color: $actionColor;
+        background-color: $action-color;
         mask-image: url("../../assets/android.svg");
         mask-repeat: no-repeat;
         mask-position: center center;
-        mask-size: $actionApiSize $actionApiSize;
+        mask-size: $action-api-size $action-api-size;
 
         &:hover {
-          background-color: $actionColorHover;
-          mask-size: $actionApiSize $actionApiSize;
+          background-color: $action-color-hover;
+          mask-size: $action-api-size $action-api-size;
           cursor: pointer;
         }
       }
 
       .SearchJcenter {
-        background-color: $actionColor;
+        background-color: $action-color;
         mask-image: url("../../assets/library.svg");
         mask-repeat: no-repeat;
         mask-position: center center;
-        mask-size: $actionApiSize $actionApiSize;
+        mask-size: $action-api-size $action-api-size;
 
         &:hover {
-          background-color: $actionColorHover;
-          mask-size: $actionApiSize $actionApiSize;
+          background-color: $action-color-hover;
+          mask-size: $action-api-size $action-api-size;
           cursor: pointer;
         }
       }
