--- a/src/components/SearchHistory/_SearchHistory.scss
+++ b/src/components/SearchHistory/_SearchHistory.scss
@@ -12,7 +12,8 @@
     //
     position: absolute;
     width: 100%;
-    height: 400px;
+    height: auto;
+    max-height: 521px;
     margin-top: 10px;
     overflow: auto;
   }
