* 适配手机端

--- a/src/components/SearchAction/SearchActionItem/_SearchActionItem.scss
+++ b/src/components/SearchAction/SearchActionItem/_SearchActionItem.scss
@@ -25,7 +25,14 @@
     transform: translateY(0px);
   }
 
+  @media screen and (max-width: 900px) {
+    & {
+      transform: translateY(0px);
+    }
+  }
+
   // Facets
 
   // States
 }
+
