--- a/src/components/SearchEdit/_SearchEdit.scss
+++ b/src/components/SearchEdit/_SearchEdit.scss
@@ -38,11 +38,24 @@
       &:focus {
         outline: none;
       }
+
+      @media screen and (max-width: 350px) {
+        & {
+          flex-grow: 0;
+          width: 200px;
+        }
+      }
     }
 
     .SearchActionWrap {
       height: 100%;
       padding-right: 10px;
+
+      @media screen and (max-width: 350px) {
+        & {
+          flex-grow: 1;
+        }
+      }
 
       .SearchItem {
         height: 100%;
