--- a/src/components/SearchHistory/_SearchHistory.scss
+++ b/src/components/SearchHistory/_SearchHistory.scss
@@ -18,6 +18,14 @@
     overflow: auto;
   }
 
+  @media screen and (max-width: 900px) {
+    & {
+      position: static;
+      max-height: unset;
+      overflow: hidden;
+    }
+  }
+
   // Facets
 
   // States
@@ -37,6 +45,13 @@
     position: absolute;
     right: 0;
     margin-right: 10px;
+
+    @media screen and (max-width: 900px) {
+      & {
+        top: 30%;
+        opacity: 1 !important;
+      }
+    }
 
     &:hover {
       color: white;
