* 适配手机端

--- a/src/components/SearchHistory/_SearchHistory.scss
+++ b/src/components/SearchHistory/_SearchHistory.scss
@@ -48,7 +48,7 @@
 
     @media screen and (max-width: 900px) {
       & {
-        top: 30%;
+        margin-top: -15px;
         opacity: 1 !important;
       }
     }
